sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:16: error: value nombres_parcours is not a member of Int
 	 	nombres_parcours nombres_parcours +1
                                 ^